name:                  amazonka-rekognition
version:               1.6.1
synopsis:              Amazon Rekognition SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.Rekognition" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-rekognition

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Rekognition
        , Network.AWS.Rekognition.CompareFaces
        , Network.AWS.Rekognition.CreateCollection
        , Network.AWS.Rekognition.CreateStreamProcessor
        , Network.AWS.Rekognition.DeleteCollection
        , Network.AWS.Rekognition.DeleteFaces
        , Network.AWS.Rekognition.DeleteStreamProcessor
        , Network.AWS.Rekognition.DescribeStreamProcessor
        , Network.AWS.Rekognition.DetectFaces
        , Network.AWS.Rekognition.DetectLabels
        , Network.AWS.Rekognition.DetectModerationLabels
        , Network.AWS.Rekognition.DetectText
        , Network.AWS.Rekognition.GetCelebrityInfo
        , Network.AWS.Rekognition.GetCelebrityRecognition
        , Network.AWS.Rekognition.GetContentModeration
        , Network.AWS.Rekognition.GetFaceDetection
        , Network.AWS.Rekognition.GetFaceSearch
        , Network.AWS.Rekognition.GetLabelDetection
        , Network.AWS.Rekognition.GetPersonTracking
        , Network.AWS.Rekognition.IndexFaces
        , Network.AWS.Rekognition.ListCollections
        , Network.AWS.Rekognition.ListFaces
        , Network.AWS.Rekognition.ListStreamProcessors
        , Network.AWS.Rekognition.RecognizeCelebrities
        , Network.AWS.Rekognition.SearchFaces
        , Network.AWS.Rekognition.SearchFacesByImage
        , Network.AWS.Rekognition.StartCelebrityRecognition
        , Network.AWS.Rekognition.StartContentModeration
        , Network.AWS.Rekognition.StartFaceDetection
        , Network.AWS.Rekognition.StartFaceSearch
        , Network.AWS.Rekognition.StartLabelDetection
        , Network.AWS.Rekognition.StartPersonTracking
        , Network.AWS.Rekognition.StartStreamProcessor
        , Network.AWS.Rekognition.StopStreamProcessor
        , Network.AWS.Rekognition.Types
        , Network.AWS.Rekognition.Waiters

    other-modules:
          Network.AWS.Rekognition.Types.AgeRange
        , Network.AWS.Rekognition.Types.Attribute
        , Network.AWS.Rekognition.Types.Beard
        , Network.AWS.Rekognition.Types.BoundingBox
        , Network.AWS.Rekognition.Types.Celebrity
        , Network.AWS.Rekognition.Types.CelebrityDetail
        , Network.AWS.Rekognition.Types.CelebrityRecognition
        , Network.AWS.Rekognition.Types.CelebrityRecognitionSortBy
        , Network.AWS.Rekognition.Types.CompareFacesMatch
        , Network.AWS.Rekognition.Types.ComparedFace
        , Network.AWS.Rekognition.Types.ComparedSourceImageFace
        , Network.AWS.Rekognition.Types.ContentModerationDetection
        , Network.AWS.Rekognition.Types.ContentModerationSortBy
        , Network.AWS.Rekognition.Types.Emotion
        , Network.AWS.Rekognition.Types.EmotionName
        , Network.AWS.Rekognition.Types.EyeOpen
        , Network.AWS.Rekognition.Types.Eyeglasses
        , Network.AWS.Rekognition.Types.Face
        , Network.AWS.Rekognition.Types.FaceAttributes
        , Network.AWS.Rekognition.Types.FaceDetail
        , Network.AWS.Rekognition.Types.FaceDetection
        , Network.AWS.Rekognition.Types.FaceMatch
        , Network.AWS.Rekognition.Types.FaceRecord
        , Network.AWS.Rekognition.Types.FaceSearchSettings
        , Network.AWS.Rekognition.Types.FaceSearchSortBy
        , Network.AWS.Rekognition.Types.Gender
        , Network.AWS.Rekognition.Types.GenderType
        , Network.AWS.Rekognition.Types.Geometry
        , Network.AWS.Rekognition.Types.Image
        , Network.AWS.Rekognition.Types.ImageQuality
        , Network.AWS.Rekognition.Types.KinesisDataStream
        , Network.AWS.Rekognition.Types.KinesisVideoStream
        , Network.AWS.Rekognition.Types.Label
        , Network.AWS.Rekognition.Types.LabelDetection
        , Network.AWS.Rekognition.Types.LabelDetectionSortBy
        , Network.AWS.Rekognition.Types.Landmark
        , Network.AWS.Rekognition.Types.LandmarkType
        , Network.AWS.Rekognition.Types.ModerationLabel
        , Network.AWS.Rekognition.Types.MouthOpen
        , Network.AWS.Rekognition.Types.Mustache
        , Network.AWS.Rekognition.Types.NotificationChannel
        , Network.AWS.Rekognition.Types.OrientationCorrection
        , Network.AWS.Rekognition.Types.PersonDetail
        , Network.AWS.Rekognition.Types.PersonDetection
        , Network.AWS.Rekognition.Types.PersonMatch
        , Network.AWS.Rekognition.Types.PersonTrackingSortBy
        , Network.AWS.Rekognition.Types.Point
        , Network.AWS.Rekognition.Types.Pose
        , Network.AWS.Rekognition.Types.Product
        , Network.AWS.Rekognition.Types.S3Object
        , Network.AWS.Rekognition.Types.Smile
        , Network.AWS.Rekognition.Types.StreamProcessor
        , Network.AWS.Rekognition.Types.StreamProcessorInput
        , Network.AWS.Rekognition.Types.StreamProcessorOutput
        , Network.AWS.Rekognition.Types.StreamProcessorSettings
        , Network.AWS.Rekognition.Types.StreamProcessorStatus
        , Network.AWS.Rekognition.Types.Sunglasses
        , Network.AWS.Rekognition.Types.TextDetection
        , Network.AWS.Rekognition.Types.TextTypes
        , Network.AWS.Rekognition.Types.Video
        , Network.AWS.Rekognition.Types.VideoJobStatus
        , Network.AWS.Rekognition.Types.VideoMetadata

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-rekognition-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.Rekognition
        , Test.AWS.Gen.Rekognition
        , Test.AWS.Rekognition.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-rekognition
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
