name:                  amazonka-route53-autonaming
version:               1.6.1
synopsis:              Amazon Route 53 Auto Naming SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.Route53AutoNaming" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-route53-autonaming

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Route53AutoNaming
        , Network.AWS.Route53AutoNaming.CreatePrivateDNSNamespace
        , Network.AWS.Route53AutoNaming.CreatePublicDNSNamespace
        , Network.AWS.Route53AutoNaming.CreateService
        , Network.AWS.Route53AutoNaming.DeleteNamespace
        , Network.AWS.Route53AutoNaming.DeleteService
        , Network.AWS.Route53AutoNaming.DeregisterInstance
        , Network.AWS.Route53AutoNaming.GetInstance
        , Network.AWS.Route53AutoNaming.GetInstancesHealthStatus
        , Network.AWS.Route53AutoNaming.GetNamespace
        , Network.AWS.Route53AutoNaming.GetOperation
        , Network.AWS.Route53AutoNaming.GetService
        , Network.AWS.Route53AutoNaming.ListInstances
        , Network.AWS.Route53AutoNaming.ListNamespaces
        , Network.AWS.Route53AutoNaming.ListOperations
        , Network.AWS.Route53AutoNaming.ListServices
        , Network.AWS.Route53AutoNaming.RegisterInstance
        , Network.AWS.Route53AutoNaming.Types
        , Network.AWS.Route53AutoNaming.UpdateInstanceCustomHealthStatus
        , Network.AWS.Route53AutoNaming.UpdateService
        , Network.AWS.Route53AutoNaming.Waiters

    other-modules:
          Network.AWS.Route53AutoNaming.Types.CustomHealthStatus
        , Network.AWS.Route53AutoNaming.Types.DNSConfig
        , Network.AWS.Route53AutoNaming.Types.DNSConfigChange
        , Network.AWS.Route53AutoNaming.Types.DNSProperties
        , Network.AWS.Route53AutoNaming.Types.DNSRecord
        , Network.AWS.Route53AutoNaming.Types.FilterCondition
        , Network.AWS.Route53AutoNaming.Types.HealthCheckConfig
        , Network.AWS.Route53AutoNaming.Types.HealthCheckCustomConfig
        , Network.AWS.Route53AutoNaming.Types.HealthCheckType
        , Network.AWS.Route53AutoNaming.Types.HealthStatus
        , Network.AWS.Route53AutoNaming.Types.Instance
        , Network.AWS.Route53AutoNaming.Types.InstanceSummary
        , Network.AWS.Route53AutoNaming.Types.Namespace
        , Network.AWS.Route53AutoNaming.Types.NamespaceFilter
        , Network.AWS.Route53AutoNaming.Types.NamespaceFilterName
        , Network.AWS.Route53AutoNaming.Types.NamespaceProperties
        , Network.AWS.Route53AutoNaming.Types.NamespaceSummary
        , Network.AWS.Route53AutoNaming.Types.NamespaceType
        , Network.AWS.Route53AutoNaming.Types.Operation
        , Network.AWS.Route53AutoNaming.Types.OperationFilter
        , Network.AWS.Route53AutoNaming.Types.OperationFilterName
        , Network.AWS.Route53AutoNaming.Types.OperationStatus
        , Network.AWS.Route53AutoNaming.Types.OperationSummary
        , Network.AWS.Route53AutoNaming.Types.OperationTargetType
        , Network.AWS.Route53AutoNaming.Types.OperationType
        , Network.AWS.Route53AutoNaming.Types.Product
        , Network.AWS.Route53AutoNaming.Types.RecordType
        , Network.AWS.Route53AutoNaming.Types.RoutingPolicy
        , Network.AWS.Route53AutoNaming.Types.ServiceChange
        , Network.AWS.Route53AutoNaming.Types.ServiceFilter
        , Network.AWS.Route53AutoNaming.Types.ServiceFilterName
        , Network.AWS.Route53AutoNaming.Types.ServiceInfo
        , Network.AWS.Route53AutoNaming.Types.ServiceSummary

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-route53-autonaming-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.Route53AutoNaming
        , Test.AWS.Gen.Route53AutoNaming
        , Test.AWS.Route53AutoNaming.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-route53-autonaming
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
